fix(box64): use conservative JVM settings